--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,12 @@ h6 {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1300px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .btn {
@@ -162,6 +164,7 @@ h6 {
 .developers-text {
   display: flex;
   flex-direction: column;
+  align-items: start;
   row-gap: 0.4rem;
 }
 
@@ -284,7 +287,7 @@ h6 {
 
 .logos-tech {
   position: absolute;
-  left: 56rem;
+  left: 61rem;
   top: 35rem;
 }
 
@@ -462,6 +465,10 @@ h6 {
   background: linear-gradient(to bottom, #faf5f3, #9cc9da);
 }
 
+.five-stars {
+  margin-bottom: 12rem;
+}
+
 .five-stars-container {
   padding: 0 10rem;
   display: flex;
@@ -498,6 +505,8 @@ h6 {
   background-size: cover;
   background-color: #062630;
   padding-top: 8rem;
+  border-top-left-radius: 1.2rem;
+  border-top-right-radius: 1.2rem;
 }
 
 .footer-top {
@@ -561,5 +570,198 @@ h6 {
 .footer-icon:hover {
   svg > path {
     opacity: 60%;
+  }
+}
+
+@media (max-width: 1220px) {
+  .reading-container {
+    column-gap: 4rem;
+  }
+
+  .book-club-container {
+    column-gap: 4rem;
+  }
+
+  .footer-bottom {
+    padding: 2.4rem 3rem;
+  }
+
+  .membership-cards-container {
+    gap: 2.4rem;
+  }
+  .pro-card {
+    max-width: 286px;
+    height: 358px;
+  }
+}
+
+@media (max-width: 1195px) {
+  .book-club-left-heading-circle {
+    top: 13rem;
+    left: 0rem;
+  }
+}
+
+@media (max-width: 1004px) {
+  .logo {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
+    width: 100%;
+  }
+  .container {
+    padding-left: 3.2rem;
+    padding-right: 3.2rem;
+  }
+  .hero-info {
+    flex-direction: column;
+    row-gap: 6.4rem;
+  }
+  .hero-left {
+    max-width: 700px;
+  }
+  .hero-right {
+    max-width: 704px;
+  }
+  .journey-container {
+    display: none;
+  }
+  .membership-cards-container {
+    align-items: center;
+    justify-content: center;
+  }
+  .reading-container {
+    flex-direction: column;
+    row-gap: 4rem;
+  }
+  .reading-left {
+    max-width: 704px;
+  }
+  .reading-right {
+    max-width: 704px;
+  }
+
+  .reading-schedule-item {
+    max-width: 704px;
+  }
+  .reading-right-heading {
+    width: 100%;
+    max-width: 600px;
+  }
+  .book-club-container {
+    flex-direction: column;
+    row-gap: 6.4rem;
+  }
+  .book-club-left,
+  .book-club-right {
+    max-width: 704px;
+  }
+  .book-club-left-heading {
+    max-width: 534px;
+  }
+  .book-club-left-heading-circle {
+    top: 6rem;
+    left: 15rem;
+  }
+  .logos-tech {
+    top: 75rem;
+    left: 70rem;
+  }
+  .five-stars-container {
+    align-items: start;
+    max-width: 754px;
+    width: 100%;
+  }
+  .five-stars-headig {
+    text-align: start;
+  }
+  .footer-top {
+    padding: 0;
+  }
+  .footer-heading {
+    max-width: 754px;
+  }
+}
+
+@media (max-width: 900px) {
+  .pro-card {
+    max-width: 340px;
+    height: 358px;
+  }
+  .membership-card {
+    max-width: 340px;
+    height: 358px;
+  }
+  .logos-tech {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero-heading {
+    font-size: 3.7rem;
+  }
+  .hero-heading,
+  .hero-paragraph {
+    max-width: 343px;
+  }
+  .reading-right-heading,
+  .book-club-left-heading,
+  .membership-heading {
+    max-width: 343px;
+    font-size: 3.4rem;
+    text-align: start;
+  }
+  .footer-heading {
+    max-width: 343px;
+    font-size: 3.4rem;
+  }
+  .book-club-left-heading-circle {
+    top: 8.7rem;
+    left: -0.5rem;
+    width: 108px;
+  }
+  .five-stars-headig {
+    font-size: 2.4rem;
+  }
+  .pro-card {
+    max-width: 340px;
+    height: 358px;
+  }
+  .membership-card {
+    max-width: 340px;
+    height: 358px;
+  }
+}
+
+@media (max-width: 450px) {
+  .btn {
+    font-size: 1.3rem;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    row-gap: 1.6rem;
+  }
+  .footer-top {
+    align-items: center;
+    padding: 1rem;
+  }
+  .developers-paragraph {
+    text-align: left;
+  }
+  .developers-container {
+    max-width: 343px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .pro-card {
+    max-width: 340px;
+    height: 358px;
+    width: 100%;
+  }
+  .membership-card {
+    max-width: 340px;
+    height: 358px;
+    width: 100%;
   }
 }
